feat: Implement security enhancements and new features (master)
This commit includes several security improvements and new
features for the CampusBookings application.  It introduces
a robust security architecture based on Spring Security and
Angular, leveraging JWT tokens for authentication and
authorization.

The changes include:

- Implemented refresh tokens (backend logic only, endpoints
  pending).
- Integrated role-based access control using @PreAuthorize.
- Configured JWT secret key, CORS, and security headers.
- Added password strength validation.
- Added authentication guards and interceptors in the Angular
  frontend.
- Implemented the ability to verify the availability of
  scenarios in real-time.
- Added new entities and repositories for TipoEscenario and
  Ubicacion.
- Removed the GenerateJpa class.